2003-10-18  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1: update doc.

	* pbuilder-user-mode-linux (UML_DEBUGMODE): error check if BUILDPLACE
	is user-accessible.

2003-10-10  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): change the wording slightly
	and document a workaround.	

2003-10-05  Junichi Uekawa  <dancer@debian.org>

	* THANKS: update thanks file.

2003-10-03  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux (BUILDING_DSC_FILE): error checking on readlink.

	* pbuilder-checkparams (IGNORE_UMOUNT): error-checking on readlink.

2003-09-24  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): actually, return 101 for policy-rc.d

	* debian/TODO: update

	* pbuilder-modules (pbuilder-options): install policy-rc.d inside chroot if it does not exist,
	and make it a dummy exit-all one.

	* THANKS: add Aaron here.

	* pbuilder-buildpackage (PACKAGENAME): use echo here, so that su won't 
	mess up the command-line. c.f. 203584, "Aaron M. Ucko" <ucko@debian.org>

2003-09-23  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update

	* pbuilder.8: updated docs.

	* pbuilder-user-mode-linux.1: add docs on new options, mirror and nonusmirror.

	* testsuite/run-test.sh (PBUILDER_UML): add option --mirror.

	* pbuilder-user-mode-linux (UML_DEBUGMODE): support mirror option to set mirror, and nonusmirror.

2003-09-22  Junichi Uekawa  <dancer@debian.org>

	* pdebuild (ARCHITECTURE): do not || true for dpkg-buildpackage -S.

	* testsuite/run-test.sh (PBUILDER_UML): update script to test both sid and sarge.

2003-09-19  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh (PBUILDER_UML): download

	* Makefile (clean): remove testsuite/testimage, it's 1G.
	(full-check): add new target to run the test program.

	* pbuilder-user-mode-linux (UML_EXITCODE): check for rootstrap.conf in the 
	current directory.
