@@ -147,7 +147,14 @@ function mountproc () {
 	echo "\
 #!/bin/sh
 
-exit 101
+while true; do
+case $1 in
+  -*) shift ;;
+  makedev) exit 0;;
+  *)  exit 101;;
+esac
+done
+
 " >  "$BUILDPLACE/usr/sbin/policy-rc.d" 
 	chmod a+x "$BUILDPLACE/usr/sbin/policy-rc.d" 
     fi
