@@ -1,8 +1,10 @@
 pbuilder (0.90) UNRELEASED; urgency=low
 
   * Sanity check if BUILDPLACE is user-accessible. (Closes: #215452).
+  * Bug fix: "debootstrap: Fails to build under pbuilder", thanks to
+    Daniel Schepler: special-case makedev in policy-rc.d (Closes: #213541).
 
- -- Junichi Uekawa <dancer@debian.org>  Sat, 18 Oct 2003 08:08:26 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 18 Oct 2003 09:22:25 +0900
 
 pbuilder (0.89) unstable; urgency=low
 
