@@ -1,5 +1,10 @@
 2003-10-18  Junichi Uekawa  <dancer@debian.org>
 
+	* testsuite/run-test.sh (PBUILDER_UML): add more cases, test-build debootstrap also.
+
+	* pbuilder-modules (pbuilder-options): change policy-rc.d to allow makedev
+	to run.
+
 	* pbuilder-user-mode-linux.1: update doc.
 
 	* pbuilder-user-mode-linux (UML_DEBUGMODE): error check if BUILDPLACE
